<resources>
    <string name="app_name">PlanIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logo">Logo image</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Sign in with google</string>
    <string name="sign_in_description">Hi there! Nice to see you again.</string>
    <string name="sign_in_hint">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">••••••••</string>
    <string name="new_to_planit">New to PlanIT?</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="client_id">91577892135-p36qm4qd9fcekf4s34uj1216bbspk873.apps.googleusercontent.com</string>
    <string name="api_key">AIzaSyBlbKkcbMIjq7MfITxHbPxTt6TYCCUIFc8</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_up_description">Hi there! Welcome to PlanIT.</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="name_hint">John</string>
    <string name="last_name_hint">Doe</string>

    //titles
    <string name="personal">Personal</string>
    <string name="teams">Teams</string>
    <string name="calendar">Calendar</string>
    <string name="habits">Habits</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="task_details">Task Details</string>
    <string name="save">Save</string>
    <string name="label">Label</string>
    <string name="chat">Chat</string>
    <string name="details">Details</string>

    <string name="message">Enter message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Habits -->
    <string name="total_days">Total days</string>
    <string name="frequency">Frequency</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="pick_days">Pick days</string>
    <string name="num_weeks">Number of days a week</string>
    <string name="goal">Goal</string>
    <string name="achieve_all">Achieve it all</string>
    <string name="goal_amount">Reach a certain amount</string>
    <string name="amount_number_of_days">Enter a number of days</string>
    <string name="done_today">Done for today</string>
    <string name="habit_created">Habit created!</string>
    <string name="search_member">Search for a member</string>

    <!-- Teams -->
    <string name="team_created">Team created!</string>

    <string name="no_labels">No labels</string>
    <string name="no_assigned_member">No assigned user</string>
    <string name="no_description">No description</string>
    <string name="no_location">No location</string>
    <string name="no_time">No time</string>
    <string name="no_reminder">No reminder</string>

    <string name="task_title_required">Task title can\'t be empty!</string>

    //settings
    <string name="set_calendar_category">Calendar</string>
    <string name="set_start_day">Start day of the week</string>
    <string name="set_week_days">Show week days</string>
    <string name="set_assigned_team_tasks">Show team tasks in calendar</string>
    <string name="set_assigned_team_tasks_desc">Show team tasks assigned to me in personal calendar</string>

    <string name="set_notifications_category">Notifications</string>
    <string name="set_notifications">Enable notifications</string>

    <string name="set_help_category">Help</string>
    <string name="set_feedback">Send feedback</string>
    <string name="set_feedback_summary">Report technical issues or suggest new features</string>

    //team details
    <string name="default_link">https://pma_tim_3/new_team_member/1234</string>
    <string name="sharing_link_description">Sharing link</string>
    <string name="team_members_description">Team members</string>

    //create task
    <string name="task_created">Task created!</string>
    <string name="task_updated">Task updated!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_location">Add location</string>
    <string name="add_labels">Add labels</string>
    <string name="add_priority">Add priority</string>
    <string name="add_date">Add date</string>
    <string name="add_time">Add time</string>
    <string name="add_assigned_member">Assign task</string>

    //dialogs
    <string name="task_reminder_dialog">Task Reminder</string>
    <string name="task_date_dialog">Task Date</string>
    <string name="task_priority_dialog">Task Priority</string>
    <string name="task_label_dialog">Add Label</string>
    <string name="task_user_dialog">Assign task</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error">An error occurred!</string>


    <string name="reminder">Reminder</string>

    <string name="team_no_name">Team name is required!</string>
    <string name="member_to_add">Member to add</string>

    <string name="team_updated">Team updated!</string>
    <string name="edit_team">Edit team</string>
    <string name="edit_team_members">Edit members</string>

    <string name="priority">%1$s priority</string>

    <string name="delete_task_text">Are you sure you want to delete %1$s?</string>
    <string name="delete_task_title">Delete task</string>

    //location
    <string name="location_disabled_title">Location disabled</string>
    <string name="location_disabled_message">Your location seems to be disabled. Do you want to enable it?</string>

    <string name="location_not_allowed_title">Allow location</string>
    <string name="location_not_allowed_message">In order to show your current position relative to the location of the task, we need to access your location. Otherwise we will only be able to show you the location of the task.</string>
    <string name="no_allow">Don\'t allow</string>

    <string name="no_internet">You are not connected to the internet. Please try again later.</string>
    <string name="task_conflict">This task was updated in the meantime. </string>

</resources>
