<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.SignUpActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/darkGrayTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/signUpDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_description"
        android:textColor="@color/lightGray"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/SignUpEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/SignUpEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_in_hint"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/SignUpPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/SignUpPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background = "@drawable/rounded_button_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/haveAnAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/have_an_account"
            android:textColor="@color/lightGray"
            android:textSize="15sp"
            android:textAlignment="textEnd"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/signInLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_now"
            android:autoLink="email"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

</LinearLayout>

</ScrollView>