<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/darkGrayTitle"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/signInDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_description"
            android:textColor="@color/lightGray"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/signInEmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/signInEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_hint"
            android:textColor="@color/darkGray"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/signInPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/signInPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/darkGray"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background = "@drawable/rounded_button_primary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newToPlanit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_to_planit"
                android:textColor="@color/lightGray"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/signInLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_now"
                android:autoLink="email"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

    </LinearLayout>


</ScrollView >