<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChooseModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <Button
            android:id="@+id/personalModeButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/personal"
            android:background="@drawable/rounded_button_primary"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <Button
            android:id="@+id/teamsModeButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/teams"
            android:background="@drawable/rounded_button_white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />
    </LinearLayout>

</ScrollView>