<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorAccent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="15dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:id="@+id/loggedFirstChar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/circle"
            android:text="MM"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:textSize="40dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/loggedEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_hint"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:paddingTop="20dp"
        android:layout_marginLeft="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loggedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:text="@string/name_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:visibility="invisible"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/loggedLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:text="@string/last_name_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:visibility="invisible"
            />

    </RelativeLayout>


</LinearLayout>